--- a/sliderule_dsi_json_exercise-SolutionMG.ipynb
+++ b/sliderule_dsi_json_exercise-SolutionMG.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
        "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
        "(500, 50)"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,14 +609,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    proj count code                                          name\n",
+      "    Proj Count Code                               Proj Theme name\n",
       "0          250   11  Environment and natural resources management\n",
       "1          216   10                             Rural development\n",
       "2          210    8                             Human development\n",
@@ -632,7 +632,7 @@
     }
    ],
    "source": [
-    "mjTopProjects = pd.DataFrame(mjthemeTopTenList, columns = ('proj count','code', 'name'))\n",
+    "mjTopProjects = pd.DataFrame(mjthemeTopTenList, columns = ('Proj Count','Code', 'Proj Theme name'))\n",
     "print(mjTopProjects)"
    ]
   },
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
      "text": [
       "   code                                          name\n",
       "0     8                             Human development\n",
-      "1    11                                              \n",
+      "1    11  Environment and natural resources management\n",
       "2     1                           Economic management\n",
       "3     6         Social protection and risk management\n",
       "4     5                         Trade and integration\n",
@@ -666,13 +666,13 @@
       "10    5                         Trade and integration\n",
       "11    4      Financial and private sector development\n",
       "12    6         Social protection and risk management\n",
-      "13    6                                              \n",
+      "13    6         Social protection and risk management\n",
       "14    2                      Public sector governance\n",
       "15    4      Financial and private sector development\n",
       "16   11  Environment and natural resources management\n",
-      "17    8                                              \n",
+      "17    8                             Human development\n",
       "18   10                             Rural development\n",
-      "19    7                                              \n"
+      "19    7                   Social dev/gender/inclusion\n"
      ]
     }
    ],
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -719,6 +719,13 @@
     "        row[1] = mjTopProjects['name'][mjTopProjects['code'] == row[0]].values[0]\n",
     "print(MajorProjects.head(20))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
