--- a/sliderule_dsi_json_exercise-SolutionMG.ipynb
+++ b/sliderule_dsi_json_exercise-SolutionMG.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -118,261 +118,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>_id</th>\n",
-       "      <th>approvalfy</th>\n",
-       "      <th>board_approval_month</th>\n",
-       "      <th>boardapprovaldate</th>\n",
-       "      <th>borrower</th>\n",
-       "      <th>closingdate</th>\n",
-       "      <th>country_namecode</th>\n",
-       "      <th>countrycode</th>\n",
-       "      <th>countryname</th>\n",
-       "      <th>countryshortname</th>\n",
-       "      <th>...</th>\n",
-       "      <th>sectorcode</th>\n",
-       "      <th>source</th>\n",
-       "      <th>status</th>\n",
-       "      <th>supplementprojectflg</th>\n",
-       "      <th>theme1</th>\n",
-       "      <th>theme_namecode</th>\n",
-       "      <th>themecode</th>\n",
-       "      <th>totalamt</th>\n",
-       "      <th>totalcommamt</th>\n",
-       "      <th>url</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>495</th>\n",
-       "      <td>{'$oid': '52b213b38594d8a2be17c96f'}</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>August</td>\n",
-       "      <td>2012-08-10T00:00:00Z</td>\n",
-       "      <td>THE COMPETITIVENESS COMPANY</td>\n",
-       "      <td>2013-08-31T00:00:00Z</td>\n",
-       "      <td>Jamaica!$!JM</td>\n",
-       "      <td>JM</td>\n",
-       "      <td>Jamaica</td>\n",
-       "      <td>Jamaica</td>\n",
-       "      <td>...</td>\n",
-       "      <td>EV,AZ</td>\n",
-       "      <td>IBRD</td>\n",
-       "      <td>Closed</td>\n",
-       "      <td>N</td>\n",
-       "      <td>{'Percent': 50, 'Name': 'Regulation and compet...</td>\n",
-       "      <td>[{'code': '40', 'name': 'Regulation and compet...</td>\n",
-       "      <td>62,40</td>\n",
-       "      <td>0</td>\n",
-       "      <td>50000</td>\n",
-       "      <td>http://www.worldbank.org/projects/P127299/tech...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>496</th>\n",
-       "      <td>{'$oid': '52b213b38594d8a2be17c970'}</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>August</td>\n",
-       "      <td>2012-08-09T00:00:00Z</td>\n",
-       "      <td>LAO PEOPLES DEMOCRATIC REPUBLIC</td>\n",
-       "      <td>2012-12-31T00:00:00Z</td>\n",
-       "      <td>Lao People's Democratic Republic!$!LA</td>\n",
-       "      <td>LA</td>\n",
-       "      <td>Lao People's Democratic Republic</td>\n",
-       "      <td>Lao People's Democratic Republic</td>\n",
-       "      <td>...</td>\n",
-       "      <td>YZ,JA,EZ,FZ,BC</td>\n",
-       "      <td>IBRD</td>\n",
-       "      <td>Closed</td>\n",
-       "      <td>N</td>\n",
-       "      <td>{'Percent': 14, 'Name': 'Child health'}</td>\n",
-       "      <td>[{'code': '63', 'name': 'Child health'}, {'cod...</td>\n",
-       "      <td>65,27,49,63</td>\n",
-       "      <td>20000000</td>\n",
-       "      <td>20000000</td>\n",
-       "      <td>http://www.worldbank.org/projects/P125298/lao-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>497</th>\n",
-       "      <td>{'$oid': '52b213b38594d8a2be17c971'}</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>August</td>\n",
-       "      <td>2012-08-03T00:00:00Z</td>\n",
-       "      <td>GOVERNMENT OF THE REPUBLIC OF GUINEA</td>\n",
-       "      <td>2014-12-31T00:00:00Z</td>\n",
-       "      <td>Republic of Guinea!$!GN</td>\n",
-       "      <td>GN</td>\n",
-       "      <td>Republic of Guinea</td>\n",
-       "      <td>Guinea</td>\n",
-       "      <td>...</td>\n",
-       "      <td>AB,AH,AI</td>\n",
-       "      <td>IBRD</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>N</td>\n",
-       "      <td>{'Percent': 100, 'Name': 'Global food crisis r...</td>\n",
-       "      <td>[{'code': '91', 'name': 'Global food crisis re...</td>\n",
-       "      <td>91</td>\n",
-       "      <td>0</td>\n",
-       "      <td>20000000</td>\n",
-       "      <td>http://www.worldbank.org/projects/P128309/seco...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>498</th>\n",
-       "      <td>{'$oid': '52b213b38594d8a2be17c972'}</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>August</td>\n",
-       "      <td>2012-08-02T00:00:00Z</td>\n",
-       "      <td>REPUBLIC OF INDONESIA</td>\n",
-       "      <td>2017-09-30T00:00:00Z</td>\n",
-       "      <td>Republic of Indonesia!$!ID</td>\n",
-       "      <td>ID</td>\n",
-       "      <td>Republic of Indonesia</td>\n",
-       "      <td>Indonesia</td>\n",
-       "      <td>...</td>\n",
-       "      <td>YA,BL,AB</td>\n",
-       "      <td>IBRD</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>N</td>\n",
-       "      <td>{'Percent': 85, 'Name': 'Rural services and in...</td>\n",
-       "      <td>[{'code': '78', 'name': 'Rural services and in...</td>\n",
-       "      <td>77,91,78</td>\n",
-       "      <td>80000000</td>\n",
-       "      <td>80000000</td>\n",
-       "      <td>http://www.worldbank.org/projects/P117243/sust...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>499</th>\n",
-       "      <td>{'$oid': '52b213b38594d8a2be17c973'}</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>August</td>\n",
-       "      <td>2012-08-02T00:00:00Z</td>\n",
-       "      <td>GOVERMENT OF KENYA</td>\n",
-       "      <td>2018-12-31T00:00:00Z</td>\n",
-       "      <td>Republic of Kenya!$!KE</td>\n",
-       "      <td>KE</td>\n",
-       "      <td>Republic of Kenya</td>\n",
-       "      <td>Kenya</td>\n",
-       "      <td>...</td>\n",
-       "      <td>BV,TC</td>\n",
-       "      <td>IBRD</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>N</td>\n",
-       "      <td>{'Percent': 1, 'Name': 'Municipal governance a...</td>\n",
-       "      <td>[{'code': '73', 'name': 'Municipal governance ...</td>\n",
-       "      <td>39,49,88,73</td>\n",
-       "      <td>300000000</td>\n",
-       "      <td>300000000</td>\n",
-       "      <td>http://www.worldbank.org/projects/P126321/keny...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 50 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                      _id  approvalfy board_approval_month  \\\n",
-       "495  {'$oid': '52b213b38594d8a2be17c96f'}        2013               August   \n",
-       "496  {'$oid': '52b213b38594d8a2be17c970'}        2013               August   \n",
-       "497  {'$oid': '52b213b38594d8a2be17c971'}        2013               August   \n",
-       "498  {'$oid': '52b213b38594d8a2be17c972'}        2013               August   \n",
-       "499  {'$oid': '52b213b38594d8a2be17c973'}        2013               August   \n",
-       "\n",
-       "        boardapprovaldate                              borrower  \\\n",
-       "495  2012-08-10T00:00:00Z           THE COMPETITIVENESS COMPANY   \n",
-       "496  2012-08-09T00:00:00Z       LAO PEOPLES DEMOCRATIC REPUBLIC   \n",
-       "497  2012-08-03T00:00:00Z  GOVERNMENT OF THE REPUBLIC OF GUINEA   \n",
-       "498  2012-08-02T00:00:00Z                 REPUBLIC OF INDONESIA   \n",
-       "499  2012-08-02T00:00:00Z                    GOVERMENT OF KENYA   \n",
-       "\n",
-       "              closingdate                       country_namecode countrycode  \\\n",
-       "495  2013-08-31T00:00:00Z                           Jamaica!$!JM          JM   \n",
-       "496  2012-12-31T00:00:00Z  Lao People's Democratic Republic!$!LA          LA   \n",
-       "497  2014-12-31T00:00:00Z                Republic of Guinea!$!GN          GN   \n",
-       "498  2017-09-30T00:00:00Z             Republic of Indonesia!$!ID          ID   \n",
-       "499  2018-12-31T00:00:00Z                 Republic of Kenya!$!KE          KE   \n",
-       "\n",
-       "                          countryname                  countryshortname  \\\n",
-       "495                           Jamaica                           Jamaica   \n",
-       "496  Lao People's Democratic Republic  Lao People's Democratic Republic   \n",
-       "497                Republic of Guinea                            Guinea   \n",
-       "498             Republic of Indonesia                         Indonesia   \n",
-       "499                 Republic of Kenya                             Kenya   \n",
-       "\n",
-       "                           ...                              sectorcode source  \\\n",
-       "495                        ...                                   EV,AZ   IBRD   \n",
-       "496                        ...                          YZ,JA,EZ,FZ,BC   IBRD   \n",
-       "497                        ...                                AB,AH,AI   IBRD   \n",
-       "498                        ...                                YA,BL,AB   IBRD   \n",
-       "499                        ...                                   BV,TC   IBRD   \n",
-       "\n",
-       "     status  supplementprojectflg  \\\n",
-       "495  Closed                     N   \n",
-       "496  Closed                     N   \n",
-       "497  Active                     N   \n",
-       "498  Active                     N   \n",
-       "499  Active                     N   \n",
-       "\n",
-       "                                                theme1  \\\n",
-       "495  {'Percent': 50, 'Name': 'Regulation and compet...   \n",
-       "496            {'Percent': 14, 'Name': 'Child health'}   \n",
-       "497  {'Percent': 100, 'Name': 'Global food crisis r...   \n",
-       "498  {'Percent': 85, 'Name': 'Rural services and in...   \n",
-       "499  {'Percent': 1, 'Name': 'Municipal governance a...   \n",
-       "\n",
-       "                                        theme_namecode    themecode  \\\n",
-       "495  [{'code': '40', 'name': 'Regulation and compet...        62,40   \n",
-       "496  [{'code': '63', 'name': 'Child health'}, {'cod...  65,27,49,63   \n",
-       "497  [{'code': '91', 'name': 'Global food crisis re...           91   \n",
-       "498  [{'code': '78', 'name': 'Rural services and in...     77,91,78   \n",
-       "499  [{'code': '73', 'name': 'Municipal governance ...  39,49,88,73   \n",
-       "\n",
-       "      totalamt totalcommamt                                                url  \n",
-       "495          0        50000  http://www.worldbank.org/projects/P127299/tech...  \n",
-       "496   20000000     20000000  http://www.worldbank.org/projects/P125298/lao-...  \n",
-       "497          0     20000000  http://www.worldbank.org/projects/P128309/seco...  \n",
-       "498   80000000     80000000  http://www.worldbank.org/projects/P117243/sust...  \n",
-       "499  300000000    300000000  http://www.worldbank.org/projects/P126321/keny...  \n",
-       "\n",
-       "[5 rows x 50 columns]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load json file as Pandas dataframe\n",
-    "Global_Projects_json_df = pd.read_json('data/world_bank_projects.json')\n",
-    "# examine data tail\n",
-    "Global_Projects_json_df.tail()"
+    "Global_Projects_json_df = pd.read_json('data/world_bank_projects.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +137,7 @@
        "(500, 50)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,14 +365,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    Proj Count Code                               Proj Theme name\n",
+      "    proj count code                                          name\n",
       "0          250   11  Environment and natural resources management\n",
       "1          216   10                             Rural development\n",
       "2          210    8                             Human development\n",
@@ -632,7 +388,7 @@
     }
    ],
    "source": [
-    "mjTopProjects = pd.DataFrame(mjthemeTopTenList, columns = ('Proj Count','Code', 'Proj Theme name'))\n",
+    "mjTopProjects = pd.DataFrame(mjthemeTopTenList, columns = ('proj count','code', 'name'))\n",
     "print(mjTopProjects)"
    ]
   },
@@ -645,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +410,7 @@
      "text": [
       "   code                                          name\n",
       "0     8                             Human development\n",
-      "1    11  Environment and natural resources management\n",
+      "1    11                                              \n",
       "2     1                           Economic management\n",
       "3     6         Social protection and risk management\n",
       "4     5                         Trade and integration\n",
@@ -666,13 +422,13 @@
       "10    5                         Trade and integration\n",
       "11    4      Financial and private sector development\n",
       "12    6         Social protection and risk management\n",
-      "13    6         Social protection and risk management\n",
+      "13    6                                              \n",
       "14    2                      Public sector governance\n",
       "15    4      Financial and private sector development\n",
       "16   11  Environment and natural resources management\n",
-      "17    8                             Human development\n",
+      "17    8                                              \n",
       "18   10                             Rural development\n",
-      "19    7                   Social dev/gender/inclusion\n"
+      "19    7                                              \n"
      ]
     }
    ],
@@ -682,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -719,13 +475,6 @@
     "        row[1] = mjTopProjects['name'][mjTopProjects['code'] == row[0]].values[0]\n",
     "print(MajorProjects.head(20))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
