--- a/sliderule_dsi_inferential_statistics_exercise_2-SolutionMG.ipynb
+++ b/sliderule_dsi_inferential_statistics_exercise_2-SolutionMG.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "*****\n",
+    "# Text readability on Github is distorted. Please download notebook.\n",
+    "*****"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Examining Racial Discrimination in the US Job Market\n",
     "\n",
     "### Background\n",
