--- a/sliderule_dsi_inferential_statistics_exercise_2-SolutionMG.ipynb
+++ b/sliderule_dsi_inferential_statistics_exercise_2-SolutionMG.ipynb
@@ -1561,7 +1561,7 @@
     "<ul><ul>\n",
     "<li> $ \\color{darkgreen} {\\large {\\textrm {Null Hypothesis, H} \\substack{0}:} } \\\\ $\n",
     "<ul> $ \\color{darkblue}  {\\textrm {Resume callback for black-sounding names  =  Resume callback for white-sounding names} } \\\\ $ </ul>\n",
-    "<li> $ \\color{darkred} {\\large {\\textrm {Null Hypothesis, H} \\substack{a}:} } \\\\ $\n",
+    "<li> $ \\color{darkred} {\\large {\\textrm {Alternate Hypothesis, H} \\substack{a}:} } \\\\ $\n",
     "<ul> $ \\color{darkblue} {\\textrm {Resume callback for black-sounding names  } \\neq \\textrm {  Resume callback for white-sounding names} \\\\ } \\\\ $ </ul>\n",
     "<li> $ \\color{darkblue} {\\textrm {Confidence Level = 95} \\%\\; \\implies {\\large \\alpha} \\textrm { = 0.05 = 5} \\%} $ \n",
     "<li> $ \\color{darkblue} {\\textrm {Critical propability = }\n",
